kanc_pamoi/src/tests/sample_code/should_fail/multi_file/type_check/leaky_let_type/src/mod.k
type Nat {
    o: Nat,
    s(n: Nat): Nat,
}

use Nat.*;

pub let _2 = s(s(o));
